Bug 961821: jit-support for writes into TypedObject arrays.

As part of above, alpha-renamed IonBuilder::setElemTryTyped to
IonBuilder::setElemTryTypedArray to keep clear the current distinction
between TypedObject and TypedArray.

Drive-by fix: Reference to Bug 894105 in comment had off-by-one typo.
Bug 961821: jit-support for writes into TypedObject arrays (r=nmatsakis).

As part of above, alpha-renamed IonBuilder::setElemTryTyped to
IonBuilder::setElemTryTypedArray to keep clear the current distinction
between TypedObject and TypedArray.

Drive-by fix: Reference to Bug 894105 in comment had off-by-one typo.